--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body >
     <section id="Section-1" class="section_1">
-        <div class=" h-screen bg-center bg-cover bg-no-repeat "
+        <div class=" xl:h-screen bg-center bg-cover bg-no-repeat "
             style="background-image: url('https://images.pexels.com/photos/347141/pexels-photo-347141.jpeg?auto=compress&cs=tinysrgb&w=1600');">
         
             <!-- <nav class="flex justify-center bg-white py-2 shadow-md ">
@@ -43,7 +43,7 @@
                 </div>
             </div>\
         
-            <div class="flex justify-center px-4 ">
+            <div class="flex justify-center px-4 py-5 xl:py-0 ">
                 <nav class=" border-lg my-auto bg-white p-6 " style="border-radius: 10px;">
                     <a href="#Section-1" class="font-bold text-lg mr-6 ml-6">Home</a>
                     <a href="#Section-2" class="font-bold text-lg mr-6 ml-6">Tentang Kami</a>
